// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HerdcCodeField component should render a deprecated value 1`] = `
<GenericSelectField
  canUnselect={true}
  error={false}
  errorText=""
  hideLabel={false}
  input={
    Object {
      "value": "450002",
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "A1 Books - Authored - research",
        "value": "450001",
      },
      Object {
        "text": "AX Books - Other Public Output",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter - Research",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter - Other Public Output",
        "value": "450008",
      },
      Object {
        "text": "C1 Journal Articles - Refereed article",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article - Other Public Output",
        "value": "450013",
      },
      Object {
        "text": "E1 Conference - Written paper - refereed proceedings",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Proceedings - Other Public Output",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
      Object {
        "text": "A2 Books - Authored - other",
        "value": "450002",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  selectedValue="450002"
/>
`;

exports[`HerdcCodeField component should render default view 1`] = `
<GenericSelectField
  canUnselect={true}
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "A1 Books - Authored - research",
        "value": "450001",
      },
      Object {
        "text": "AX Books - Other Public Output",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter - Research",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter - Other Public Output",
        "value": "450008",
      },
      Object {
        "text": "C1 Journal Articles - Refereed article",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article - Other Public Output",
        "value": "450013",
      },
      Object {
        "text": "E1 Conference - Written paper - refereed proceedings",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Proceedings - Other Public Output",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  selectedValue={Array []}
/>
`;

exports[`HerdcCodeField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  canUnselect={true}
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "A1 Books - Authored - research",
        "value": "450001",
      },
      Object {
        "text": "AX Books - Other Public Output",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter - Research",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter - Other Public Output",
        "value": "450008",
      },
      Object {
        "text": "C1 Journal Articles - Refereed article",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article - Other Public Output",
        "value": "450013",
      },
      Object {
        "text": "E1 Conference - Written paper - refereed proceedings",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Proceedings - Other Public Output",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  selectedValue={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`HerdcCodeField component should render when given a default value field props 1`] = `
<GenericSelectField
  canUnselect={true}
  defaultValue="afr"
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "A1 Books - Authored - research",
        "value": "450001",
      },
      Object {
        "text": "AX Books - Other Public Output",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter - Research",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter - Other Public Output",
        "value": "450008",
      },
      Object {
        "text": "C1 Journal Articles - Refereed article",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article - Other Public Output",
        "value": "450013",
      },
      Object {
        "text": "E1 Conference - Written paper - refereed proceedings",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Proceedings - Other Public Output",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  selectedValue={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`HerdcCodeField component should render with given field props 1`] = `
<GenericSelectField
  canUnselect={true}
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "A1 Books - Authored - research",
        "value": "450001",
      },
      Object {
        "text": "AX Books - Other Public Output",
        "value": "450005",
      },
      Object {
        "text": "B1 Book Chapter - Research",
        "value": "450006",
      },
      Object {
        "text": "BX Book Chapter - Other Public Output",
        "value": "450008",
      },
      Object {
        "text": "C1 Journal Articles - Refereed article",
        "value": "450009",
      },
      Object {
        "text": "CX Journal Article - Other Public Output",
        "value": "450013",
      },
      Object {
        "text": "E1 Conference - Written paper - refereed proceedings",
        "value": "450014",
      },
      Object {
        "text": "EX Conference Proceedings - Other Public Output",
        "value": "450018",
      },
      Object {
        "text": "CW1 Creative Work",
        "value": "454028",
      },
      Object {
        "text": "CW2 Live Performance of Creative Work",
        "value": "454029",
      },
      Object {
        "text": "CW3 Recorded or Rendered Creative Work",
        "value": "454030",
      },
      Object {
        "text": "CW4 Curated or Produced Exhibition or Event",
        "value": "454031",
      },
      Object {
        "text": "CW5 Research Report for an External Body",
        "value": "454032",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  selectedValue={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
